--- a/config.yml
+++ b/config.yml
@@ -16,11 +16,11 @@ youplus:
     version: 1
 log:
   youlog:
-    application: "Thumbnail Service"
-    instance: "thumbnail"
-    addr: "localhost:50052"
-    retry: 3000
-    remote: false
+    application: "ThumbnailService"
+    instance: "main"
+    engine:
+      local:
+        type: logrus
 register:
   enable: false
   endpoints:
